--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Bytesized&family=Jersey+10&family=Workbench&display=swap');
 
+body {
+	font-family: "Jersey 10", sarif;
+	font-size: larger;
+}
+
+:is(h1, h2, h3, h4, h5, h6) {
+	font-family: "Bytesized", sarif;
+	font-size: xx-large;
+}
+
 header {
 	margin: 1rem;
 	top: 1rem !important;
+}
+
+.round {
+	border-radius: 20px;
 }
 
 .bi {
@@ -13,6 +27,22 @@ header {
 	font-size: 2.5rem;
 }
 
+/*class to mimic a crt screen effect*/
+.crt {
+	/*Set Background*/
+	background-color: #171717;
+	background-image: url(img/scanlines.png);
+
+	/*Theming*/
+	border-radius: 50px;
+	color: #00ff00;
+	font-family: "Workbench", monospace;
+	text-shadow: 0 0 10px #00ff00;
+	filter: blur(1px);
+	padding: 2rem;
+}
+
+/*fonts*/
 .workbench-IBM {
 	font-family: "Workbench", sans-serif;
 	font-optical-sizing: auto;
