--- a/style.css
+++ b/style.css
@@ -7,12 +7,22 @@ body {
 
 :is(h1, h2, h3, h4, h5, h6) {
 	font-family: "Bytesized", sarif;
-	font-size: xx-large;
+	font-size: 36;
 }
 
 header {
 	margin: 1rem;
 	top: 1rem !important;
+}
+
+.fill {
+	width: 100%; 
+	height: 100%;
+}
+
+.border {
+	border-width: 1px;
+	border-color: black;
 }
 
 .round {
