--- a/style.css
+++ b/style.css
@@ -15,14 +15,14 @@ header {
 	top: 1rem !important;
 }
 
+.anchor {
+	position: relative;
+	top: -150px;
+}
+
 .fill {
 	width: 100%; 
 	height: 100%;
-}
-
-.border {
-	border-width: 1px;
-	border-color: black;
 }
 
 .round {
