--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ header {
 	top: 1rem !important;
 }
 
+img {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: contain;
+}
+
 .anchor {
 	position: relative;
 	top: -150px;
